<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_form_item_image"
                android:layout_width="@dimen/iv_item_form_image_width"
                android:layout_height="@dimen/iv_item_form_image_height"
                android:layout_margin="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/bt_add_photo_from_gallery"
                    android:text="@string/new_memory_btn_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/bt_take_photo"
                    android:text="@string/new_memory_btn_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>


            <EditText
                android:id="@+id/et_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/str_post_title" />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/str_user_name" />
            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:gravity="top"
                android:hint="@string/str_item_description" />
            <EditText
                android:id="@+id/et_phone_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/str_user_phone_number" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/form_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                tools:context=".MapsActivity"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/new_memory_btn_cancel"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/bt_save"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/new_memory_btn_save"
                    android:layout_height="wrap_content" />
            </LinearLayout>


</LinearLayout>